Fix: TTF-490 - collapsibles on mobile
https://digitaltools.phe.org.uk/browse/TTF-490

--- a/app/shared/components/Toggle/style.scss
+++ b/app/shared/components/Toggle/style.scss
@@ -34,6 +34,13 @@ $dims: 2rem;
     }
   }
 
+  .collapsible__content{
+    .section--has-toggle & {
+      @include media-breakpoint-down(sm) {
+        padding-left: 0;
+      }
+    }
+  }
   .collapsible__trigger {
     display: block;
     font-family: $headings-font-family;
